--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500&family=Gabarito:wght@500&family=Josefin+Sans:wght@600&family=Kanit:wght@600&family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./assets/img/ico.ico">
 
 </head>
 <body>
     <header class="nav-wrapper">
         <nav>
-            <a class="logo" href="">Logo</a>
+            <a href="#"><img class="logo" src="./assets/img/logo-2.png" alt=""></a>
             <input type="checkbox" id="toggle">
             <label for="toggle"><i class="material-icons">menu</i></label>
             <div class="menu">
