--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -8,11 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500&family=Gabarito:wght@500&family=Josefin+Sans:wght@600&family=Kanit:wght@600&family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../assets/img/ico.ico">
 </head>
 <body>
     <header class="nav-wrapper">
         <nav>
-            <a class="logo" href="./assets/img/coche.png">Logo</a>
+            <a href="../index.html"><img class="logo" src="../assets/img/logo-2.png" alt=""></a>
             <input type="checkbox" id="toggle">
             <label for="toggle"><i class="material-icons">menu</i></label>
             <div class="menu">
