--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -8,11 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500&family=Gabarito:wght@500&family=Josefin+Sans:wght@600&family=Kanit:wght@600&family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../assets/img/ico.ico">
 </head>
 <body>
     <header class="nav-wrapper">
         <nav>
-            <a class="logo" href="./assets/img/coche.png">Logo</a>
+            <a href="../index.html"><img class="logo" src="../assets/img/logo-2.png" alt=""></a>
             <input type="checkbox" id="toggle">
             <label for="toggle"><i class="material-icons">menu</i></label>
             <div class="menu">
@@ -27,7 +28,7 @@
         </nav>
     </header>
     <main class="main3">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d420.9429120209024!2d-63.730776819042795!3d-32.43138954409468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1695263946473!5m2!1ses!2sar" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>   
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1001.1716272017593!2d-63.73113773649003!3d-32.431838511921434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cdaf25a3550893%3A0xf722851ae93f8acc!2sHernando%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1698893693503!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>   
     </main>
         <section class="turnos">
             <h4>Formulario de turnos</h4>
