se modificó el footer con sus links

--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -60,8 +60,8 @@
         <section>    
             <div>
                 <ul class="subClass">
-                    <a href="https://www.instagram.com/"><img src="../assets/img/instagram (2).png" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/"><img src="../assets/img/facebook (2).png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/rogevanze/"><img src="../assets/img/instagram (2).png" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100057583564458"><img src="../assets/img/facebook (2).png" alt="Facebook"></a>
                     <a href="https://www.youtube.com/"><img src="../assets/img/youtube (2).png" alt="Youtube"></a>
                     <a href="https://twitter.com/home"><img src="../assets/img/twitter (1).png" alt="Twitter"></a>
                 </ul>
@@ -71,7 +71,7 @@
         </article>
         </section>
         <section>
-            <a class="wpp"  href="https://web.whatsapp.com/"><img src="../assets/img/wpp chico.png" alt=""></a>
+            <a class="wpp"  href="https://wa.link/49ccdx"><img src="../assets/img/wpp chico.png" alt=""></a>
         </section>
 
     </footer>
