se agregó animación al boton de la página turnos

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -43,18 +43,16 @@
         <section>    
             <div>
                 <ul class="subClass">
-                    <a href="https://www.instagram.com/rogevanze/"><img src="../assets/img/instagram (2).png" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/profile.php?id=100057583564458"><img src="../assets/img/facebook (2).png" alt="Facebook"></a>
-                    <a href="https://www.youtube.com/"><img src="../assets/img/youtube (2).png" alt="Youtube"></a>
-                    <a href="https://twitter.com/home"><img src="../assets/img/twitter (1).png" alt="Twitter"></a>
+                    <a href="https://www.instagram.com/rogevanze/" target="_blank"><img src="../assets/img/instagram (2).png" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100057583564458" target="_blank"><img src="../assets/img/facebook (2).png" alt="Facebook"></a>
                 </ul>
             </div>
         <article class="pie">
-            <p>Para comunicarse con nosotros <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox" target="_blank">toque acá</a></p>
+            <p>Podes encontrarnos en Saavedra 67, Hernando, Córdoba</p>
         </article>
         </section>
         <section>
-            <a class="wpp"  href="https://wa.link/49ccdx"><img src="../assets/img/wpp chico.png" alt=""></a>
+            <a class="wpp"  href="https://wa.link/49ccdx" target="_blank"><img src="../assets/img/wpp chico.png" alt=""></a>
         </section>
 
     </footer>
