se modificó el apartado de Servicios

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -28,8 +28,22 @@
         </nav>
     </header>
     <main class="auto">
-        <section>
-            <h1>SERVICIOS</h1>
+        <section class="card-servicios">
+            <article class="tarjeta">
+                <h2>Pintado de autos en cabina presurizada</h2>
+            </article>
+            <article class="tarjeta">
+                <h2>Reparación de autos</h2>
+            </article>
+            <article class="tarjeta">
+                <h2>Venta y colocación de parabrisas</h2>
+            </article>
+            <article class="tarjeta">
+                <h2>Las mejores herramientas para lograr la mejor calidad</h2>
+            </article>
+            <article class="tarjeta">
+                <h2>Laboratorio de colorimetría</h2>
+            </article>
         </section>
     </main>
     <footer class="footer">
