se modificó el apartado de servicios

--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -33,7 +33,7 @@
                 <div>
                     <img src="../assets/img/choca.jpg" alt="">
                 </div>
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h2>
+                <h2>Somos una empresa ubicada en la localidad de Hernando, Córdoba. Contamos con empleados de alto nivel y experiencia, atrayendo clientes de toda la zona.  </h2>
             </article>
             <article class="card">
                 <div>
