--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -30,12 +30,12 @@
     <main>
         <section class="galeria" data-aos="fade-down-right">
             <div class="galeria2">
-                <img class="item1" src="../assets/img/lala.jpg" alt="img">
-                <img class="item2" src="../assets/img/dhiva-krishna-YApS6TjKJ9c-unsplash.jpg" alt="img">
-                <img class="item3" src="../assets/img/chau.jpg" alt="img">
-                <img class="item4" src="../assets/img/stefan-rodriguez-2AovfzYV3rc-unsplash.jpg" alt="img">
-                <img class="item5" src="../assets/img/aaaa.jpg" alt="img">
-                <img class="item6" src="../assets/img/eduardo-flores-xpcUYaZtplI-unsplash.jpg" alt="img">
+                <img class="item1" src="../assets/img/taller9.jpg" alt="img">
+                <img class="item2" src="../assets/img/taller11.jpg" alt="img">
+                <img class="item3" src="../assets/img/taller3.jpeg" alt="img">
+                <img class="item4" src="../assets/img/taller2.jpeg" alt="img">
+                <img class="item5" src="../assets/img/taller4.jpeg" alt="img">
+                <img class="item6" src="../assets/img/taller7.jpg" alt="img">
             </div>
         </section>
     </main>
