se arregló un problema con las cards

--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -31,21 +31,21 @@
         <section class="cardContainer">
             <article class="card">
                 <div>
-                    <img src="../assets/img/choca.jpg" alt="">
+                    <img src="../assets/img/her.jpg" alt="">
                 </div>
                 <h2>Somos una empresa ubicada en la localidad de Hernando, Córdoba. Contamos con empleados de alto nivel y experiencia, atrayendo clientes de toda la zona.  </h2>
             </article>
             <article class="card">
                 <div>
-                    <img src="../assets/img/martillo.jpg" alt="">
+                    <img src="../assets/img/cabina2.jpg" alt="">
                 </div>
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h2>
+                <h2>Contamos con la única cabina presurizada de pintura de la zona. </h2>
             </article>
             <article class="card">
                 <div>
-                    <img src="../assets/img/hora.jpg" alt="">
+                    <img src="../assets/img/taller2.jpeg" alt="">
                 </div>
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h2>
+                <h2>Por último, contamos con la mejor infraestructura y las mejores herramientas para que tu coche quede como nuevo, te esperamos! </h2>
             </article>
         </section>
     </main>
