se corrigio error en el SEO

--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Somos el mejor taller de chapa y pintura de la zona. Nos encontramos en Hernando-Córdoba y esperamos tu visita.">
+    <meta name="keywords" content="autos, chocados, taller, chapa, pintura, arreglos">
+    <meta name="author" content="Santino Martinez">
+    <meta name="copyright" content="Vanzetti Hnos.">
+    <meta property="og:title" name="Vanzetti Hnos. Estética del automotor">
+    <meta property="og:title" content=Vanzetti Hnos. Estética del automotor>
+    <meta property="og:site_name" content=Vanzetti Hnos.>
+    <meta property="og:description" content=Somos el mejor taller de chapa y pintura de la zona. Nos encontramos en Hernando-Córdoba y esperamos tu visita.>
+    <meta property="og:type" content=website>
+    <meta name="robots" content="all">
     <title>Quienes Somos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
