--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Somos el mejor taller de chapa y pintura de la zona. Nos encontramos en Hernando-Córdoba y esperamos tu visita.">
+    <meta name="keywords" content="autos, chocados, taller, chapa, pintura, arreglos">
+    <meta name="author" content="Santino Martinez">
+    <meta name="copyright" content="Vanzetti Hnos.">
+    <meta property="og:title" name="Vanzetti Hnos. Estética del automotor">
+    <meta property="og:title" content=Vanzetti Hnos. Estética del automotor>
+    <meta property="og:site_name" content=Vanzetti Hnos.>
+    <meta property="og:description" content=Somos el mejor taller de chapa y pintura de la zona. Nos encontramos en Hernando-Córdoba y esperamos tu visita.>
+    <meta property="og:type" content=website>
+    <meta name="robots" content="all">
     <title>Turnos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,18 +37,6 @@
             </div>
         </nav>
     </header>
-    <!-- <main class="main3">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1001.1747776078885!2d-63.7310214074382!3d-32.43155476198769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cdaf25a3550893%3A0xf722851ae93f8acc!2sHernando%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1698899537769!5m2!1ses-419!2sar" width="1000" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>   
-        <section class="turnos">
-            <h4>Formulario de turnos</h4>
-            <input class="controls" type="text" name="nombres" id="nombres"  placeholder="Ingrese su Nombre">
-            <input class="controls" type="text" name="apellidos" id="apellidos"  placeholder="Ingrese su Apellido">
-            <input class="controls" type="email" name="correo" id="correo"  placeholder="Ingrese su Correo">
-            <input class="controls" type="text" name="contraseña" id="teléfono"  placeholder="Ingrese su Teléfono">
-            <p>Estoy de acuerdo con <a href="../error404.html" target="_blank">Términos y Condiciones</a></p>
-            <input class="button" type="submit" value="Enviar">
-        </section>
-    </main> -->
     <main class="main3">
         <section class="main3-mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1001.1747776078885!2d-63.7310214074382!3d-32.43155476198769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cdaf25a3550893%3A0xf722851ae93f8acc!2sHernando%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1698899537769!5m2!1ses-419!2sar" width="1000" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>   
@@ -49,7 +47,7 @@
             <input class="controls" type="text" name="apellidos" id="apellidos"  placeholder="Ingrese su Apellido">
             <input class="controls" type="email" name="correo" id="correo"  placeholder="Ingrese su Correo">
             <input class="controls" type="text" name="contraseña" id="teléfono"  placeholder="Ingrese su Teléfono">
-            <p>Estoy de acuerdo con <a href="">Términos y Condiciones</a></p>
+            <p>Estoy de acuerdo con <a href="../error404.html">Términos y Condiciones</a></p>
             <input class="button" type="submit" value="Enviar">
         </section>
     </main>
