--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -71,7 +71,7 @@
         </article>
         </section>
         <section>
-            <a class="wpp"  href="https://wa.link/49ccdx" target="_blank"><img src="../assets/img/wpp chico.png" alt=""></a>
+            <a class="wpp"  href="https://wa.link/5a83oc" target="_blank"><img src="../assets/img/wpp chico.png" alt=""></a>
         </section>
 
     </footer>
