--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
         </nav>
     </header>
     <main class="main">
+        <div class="pag-princ">
+            <div class="content-section">
+                <div class="tarjeta-2">
+                    <h1>Vanzetti Hnos. Estética del automotor</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+                    <button>Explorar</button>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <section>
