corrigiendo errores de la entrega

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -37,7 +37,8 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="main-galeria">
+        <h1>Galería</h1>
         <section class="galeria" data-aos="fade-down-right">
             <div class="galeria2">
                 <img class="item1" src="../assets/img/taller9.jpg" alt="img">
