--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -37,23 +37,35 @@
             </div>
         </nav>
     </header>
-    <main class="auto">
-        <section class="card-servicios">
-            <article class="tarjeta">
-                <h2>Pintado de autos en cabina presurizada</h2>
-            </article>
-            <article class="tarjeta">
-                <h2>Reparación de autos</h2>
-            </article>
-            <article class="tarjeta">
-                <h2>Venta y colocación de parabrisas</h2>
-            </article>
-            <article class="tarjeta">
-                <h2>Las mejores herramientas para lograr la mejor calidad</h2>
-            </article>
-            <article class="tarjeta">
-                <h2>Laboratorio de colorimetría</h2>
-            </article>
+    <main class="index-main">
+        <h1>Servicios</h1>
+        <section class="section-servicios">
+            <img src="../assets/img/dhiva-krishna-YApS6TjKJ9c-unsplash.jpg">
+            <div>
+                <h2>Titulo</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </section>
+        <section class="section-servicios">
+            <img src="../assets/img/dhiva-krishna-YApS6TjKJ9c-unsplash.jpg">
+            <div>
+                <h2>Titulo</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </section>
+        <section class="section-servicios">
+            <img src="../assets/img/dhiva-krishna-YApS6TjKJ9c-unsplash.jpg">
+            <div>
+                <h2>Titulo</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </section>
+        <section class="section-servicios">
+            <img src="../assets/img/dhiva-krishna-YApS6TjKJ9c-unsplash.jpg">
+            <div>
+                <h2>Titulo</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
         </section>
     </main>
     <footer class="footer">
