--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -38,6 +38,7 @@
         </nav>
     </header>
     <main class="main2">
+        <h1>Quienes somos</h1>
         <section class="cardContainer">
             <article class="card">
                 <div>
