--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -40,31 +40,38 @@
     <main class="index-main">
         <h1>Servicios</h1>
         <section class="section-servicios">
-            <img src="../assets/img/dhiva-krishna-YApS6TjKJ9c-unsplash.jpg">
+            <img src="../assets/img/taller4.jpeg">
             <div>
-                <h2>Titulo</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <h2>Pintado en cabina presurizada</h2>
+                <p>Dispuestos a dejar tu auto luciendo de primer nivel, ocupándonos de retocar hasta el más mínimo detalle, y ofreciendo la mejor pintura calidad-precio de la zona. El tiempo aproximado que se emplea para este servicio es de una semana, dependiendo la cantidad de partes que se deban pintar del vehículo.</p>
             </div>
         </section>
         <section class="section-servicios">
-            <img src="../assets/img/dhiva-krishna-YApS6TjKJ9c-unsplash.jpg">
+            <img src="../assets/img/taller12.jpg">
             <div>
-                <h2>Titulo</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <h2>Reparaciones</h2>
+                <p>Contamos con la capacidad de arreglar cualquier inconveniente estético de tu auto, ya sea choques, bollos, cualquier tipo de ruptura. Empleamos un tiempo aproximado de entre 4 y 7 días dependiendo de la gravedad de la ruptura.</p>
             </div>
         </section>
         <section class="section-servicios">
-            <img src="../assets/img/dhiva-krishna-YApS6TjKJ9c-unsplash.jpg">
+            <img src="../assets/img/para.jpg">
             <div>
-                <h2>Titulo</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <h2>Venta, colocación y reparación de parabrisas</h2>
+                <p>De todas las marcas y tipos, contactanos para consultar por stock o a pedido. El tiempo aproximado de un arreglo es entre 2 y 4 días, y para cambiarlo entre 4 y 7 días.</p>
             </div>
         </section>
         <section class="section-servicios">
-            <img src="../assets/img/dhiva-krishna-YApS6TjKJ9c-unsplash.jpg">
+            <img src="../assets/img/taller2.jpeg">
             <div>
-                <h2>Titulo</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <h2>Herramientas</h2>
+                <p>Contamos con la mejor calidad de herramientas e infraestructura para que tu auto quede como recíen salido de fábrica, empleando las mejores técnicas y haciendo que nuestro trabajo sea de primer nivel.</p>
+            </div>
+        </section>
+        <section class="section-servicios">
+            <img src="../assets/img/taller7.jpg">
+            <div>
+                <h2>Laboratorio de colorimetría</h2>
+                <p>Capaces de replicar el color de tu auto para obtener un resultado expléndido de pintura de mejor calidad. No te quedes sin consultarnos.</p>
             </div>
         </section>
     </main>
