se corrigio error en la correcion

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -23,7 +23,7 @@
 <body>
     <header class="nav-wrapper">
         <nav>
-            <a href="../index.html"><img class="logo" src="../assets/img/logo-2.png" alt=""></a>
+            <a href="../index.html"><img class="logo" src="../assets/img/logo-2.png"></a>
             <input type="checkbox" id="toggle">
             <label for="toggle"><i class="material-icons">menu</i></label>
             <div class="menu">
@@ -41,12 +41,12 @@
         <h1>Galería</h1>
         <section class="galeria" data-aos="fade-down-right">
             <div class="galeria2">
-                <img class="item1" src="../assets/img/taller9.jpg" alt="img">
-                <img class="item2" src="../assets/img/taller11.jpg" alt="img">
-                <img class="item3" src="../assets/img/taller3.jpeg" alt="img">
-                <img class="item4" src="../assets/img/taller2.jpeg" alt="img">
-                <img class="item5" src="../assets/img/taller4.jpeg" alt="img">
-                <img class="item6" src="../assets/img/taller7.jpg" alt="img">
+                <img class="item1" src="../assets/img/taller9.jpg">
+                <img class="item2" src="../assets/img/taller11.jpg">
+                <img class="item3" src="../assets/img/taller3.jpeg">
+                <img class="item4" src="../assets/img/taller2.jpeg">
+                <img class="item5" src="../assets/img/taller4.jpeg">
+                <img class="item6" src="../assets/img/taller7.jpg">
             </div>
         </section>
     </main>
@@ -70,7 +70,7 @@
         </article>
         </section>
         <section>
-            <a class="wpp"  href="https://wa.link/5a83oc" target="_blank"><img src="../assets/img/wpp chico.png" alt=""></a>
+            <a class="wpp"  href="https://wa.link/5a83oc" target="_blank"><img src="../assets/img/wpp chico.png"></a>
         </section>
 
     </footer>
