--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -23,7 +23,7 @@
 <body>
     <header class="nav-wrapper">
         <nav>
-            <a href="../index.html"><img class="logo" src="../assets/img/logo-2.png" alt=""></a>
+            <a href="../index.html"><img class="logo" src="../assets/img/logo-2.png"></a>
             <input type="checkbox" id="toggle">
             <label for="toggle"><i class="material-icons">menu</i></label>
             <div class="menu">
@@ -42,19 +42,19 @@
         <section class="cardContainer">
             <article class="card">
                 <div>
-                    <img src="../assets/img/her.jpg" alt="">
+                    <img src="../assets/img/her.jpg">
                 </div>
                 <h2>Somos una empresa ubicada en la localidad de Hernando, Córdoba. Contamos con empleados de alto nivel y experiencia, atrayendo clientes de toda la zona.  </h2>
             </article>
             <article class="card">
                 <div>
-                    <img src="../assets/img/cabina2.jpg" alt="">
+                    <img src="../assets/img/cabina2.jpg">
                 </div>
                 <h2>Contamos con la única cabina presurizada de pintura de la zona. </h2>
             </article>
             <article class="card">
                 <div>
-                    <img src="../assets/img/taller2.jpeg" alt="">
+                    <img src="../assets/img/taller2.jpeg">
                 </div>
                 <h2>Por último, contamos con la mejor infraestructura y las mejores herramientas para que tu coche quede como nuevo, te esperamos! </h2>
             </article>
@@ -80,7 +80,7 @@
         </article>
         </section>
         <section>
-            <a class="wpp"  href="https://wa.link/5a83oc" target="_blank"><img src="../assets/img/wpp chico.png" alt=""></a>
+            <a class="wpp"  href="https://wa.link/5a83oc" target="_blank"><img src="../assets/img/wpp chico.png"></a>
         </section>
 
     </footer>
