--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -23,7 +23,7 @@
 <body>
     <header class="nav-wrapper">
         <nav>
-            <a href="../index.html"><img class="logo" src="../assets/img/logo-2.png" alt=""></a>
+            <a href="../index.html"><img class="logo" src="../assets/img/logo-2.png"></a>
             <input type="checkbox" id="toggle">
             <label for="toggle"><i class="material-icons">menu</i></label>
             <div class="menu">
@@ -95,7 +95,7 @@
         </article>
         </section>
         <section>
-            <a class="wpp"  href="https://wa.link/5a83oc" target="_blank"><img src="../assets/img/wpp chico.png" alt=""></a>
+            <a class="wpp"  href="https://wa.link/5a83oc" target="_blank"><img src="../assets/img/wpp chico.png"></a>
         </section>
 
     </footer>
