--- a/pages/error404.html
+++ b/pages/error404.html
@@ -3,22 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../assets/img/error.ico.ico">
     <title>Error 404</title>
 </head>
 <body>
-    <main class="404">
-        <section class="main-404">
-            <h1>Error.</h1>
-            <div>
-                <a href="../index.html">Inicio</a>
-            </div>
-        </section>
-        <section class="sec2">
-            <h2>404</h2>
-            <div>
-                <p>Lamentablemente esta página no existe. </p>
-                <p> </p>
-            </div>
+    <main>
+        <section class="error-404">
+            <h1>404-Esta página no existe.
+            </h1>
         </section>
     </main>
 </body>
