--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -47,7 +47,7 @@
             <input class="controls" type="text" name="apellidos" id="apellidos"  placeholder="Ingrese su Apellido">
             <input class="controls" type="email" name="correo" id="correo"  placeholder="Ingrese su Correo">
             <input class="controls" type="text" name="contraseña" id="teléfono"  placeholder="Ingrese su Teléfono">
-            <p>Estoy de acuerdo con <a href="../error404.html">Términos y Condiciones</a></p>
+            <p>Estoy de acuerdo con <a href="../pages/error404.html" target="_blank">Términos y Condiciones</a></p>
             <input class="button" type="submit" value="Enviar">
         </section>
     </main>
