--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:description" content=Somos el mejor taller de chapa y pintura de la zona. Nos encontramos en Hernando-Córdoba y esperamos tu visita.>
     <meta property="og:type" content=website>
     <meta name="robots" content="all">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vanzetti Hnos.</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
