cambio en imagenes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="./pages/quienes-somos.html">Quienes somos</a></li>
                     <li><a href="./pages/servicios.html">Servicios</a></li>
-                    <li><a href="./pages/galeria.html">Galeria</a></li>
                     <li><a href="./pages/turnos.html">Turnos</a></li>
                 </ul>
             </div>
@@ -45,7 +44,7 @@
             <div class="conteCarrousel">
                 <div class="itemCarrousel" id="itemCarrousel-1">
                     <div class="itemCarrouselTarjeta">
-                        <img src="./assets/img/aaaa.jpg">
+                        <img src="./assets/img/frente2.jpeg">
                     </div>
                     <div class="itemCarrouselArrows">
                         <a href="#itemCarrousel-3">
@@ -58,7 +57,7 @@
                 </div>
                 <div class="itemCarrousel" id="itemCarrousel-2">
                     <div class="itemCarrouselTarjeta">
-                        <img src="./assets/img/lala.jpg">
+                        <img src="./assets/img/frente1.jpeg">
                     </div>
                     <div class="itemCarrouselArrows">
                         <a href="#itemCarrousel-1">
@@ -71,7 +70,7 @@
                 </div>
                 <div class="itemCarrousel" id="itemCarrousel-3">
                     <div class="itemCarrouselTarjeta">
-                        <img src="./assets/img/chau.jpg">
+                        <img src="./assets/img/lab.jpeg">
                     </div>
                     <div class="itemCarrouselArrows">
                         <a href="#itemCarrousel-2">
