--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="conteCarrousel">
                 <div class="itemCarrousel" id="itemCarrousel-1">
                     <div class="itemCarrouselTarjeta">
-                        <img src="./assets/img/frente2.jpeg">
+                        <img src="./assets/img/frente22.jpg">
                     </div>
                     <div class="itemCarrouselArrows">
                         <a href="#itemCarrousel-3">
@@ -57,7 +57,7 @@
                 </div>
                 <div class="itemCarrousel" id="itemCarrousel-2">
                     <div class="itemCarrouselTarjeta">
-                        <img src="./assets/img/frente1.jpeg">
+                        <img src="./assets/img/frente11.jpg">
                     </div>
                     <div class="itemCarrouselArrows">
                         <a href="#itemCarrousel-1">
@@ -70,7 +70,7 @@
                 </div>
                 <div class="itemCarrousel" id="itemCarrousel-3">
                     <div class="itemCarrouselTarjeta">
-                        <img src="./assets/img/lab.jpeg">
+                        <img src="./assets/img/lab.jpg">
                     </div>
                     <div class="itemCarrouselArrows">
                         <a href="#itemCarrousel-2">
