--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                 <a href="#itemCarrousel-3">•</a>
             </div>
         </div>
+        <section class="home-icon"> 
+            <img class="icon-home" src="./assets/img/logo-2.png">
+        </section>
     </main>
     <footer class="footer">
         <section>
